# libb-log

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md
src/log/: __init__.py  _backend.py  _logger.py  colors.py  config.py  filters.py  handlers.py  loggers.py  setup.py  sinks.py
tests/: test_backend.py  test_colors.py  test_config.py  test_filters.py  test_handlers.py  test_logger.py  test_loggers.py  test_setup.py  test_sinks.py
