[tool.poetry]
name = "libb-log"
version = "0.1.0"
description = ""
authors = ["bissli <bissli@xyz.com>"]
readme = "README.md"
packages = [{ include = "log", from = "src" }]

[tool.poetry.dependencies]
python = "~3.11"

tls-syslog = "0.2.0"
colorama = { version = "*", markers = "sys_platform == 'win32'" }
libb-mail = { git = "https://github.com/bissli/libb-mail.git", rev = "master" }
libb-util = { git = "https://github.com/bissli/libb-util.git", rev = "master" }

# == referenced
"web.py" = { version = "^0.62", optional = true }

# == test
asserts = { version = "^0.12.0", optional = true }
pytest = { version = "^8.0.0", optional = true }
pytest-mock = { version = "^3.12.0", optional = true }
pytest-runner = { version = "^6.0.1", optional = true }
pdbpp = { git = "https://github.com/pdbpp/pdbpp.git", rev = "master", optional = true }

[tool.poetry.extras]
test = [
  "asserts",
  "docker",
  "pdbpp",
  "pytest",
  "pytest-mock",
  "pytest-runner",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
