[tool.poetry]
name = "libb-log"
version = "0.1.0"
description = ""
authors = ["bissli <bissli@xyz.com>"]
readme = "README.md"
packages = [{ include = "log", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"

loguru = "^0.7"
tls-syslog = "0.2.0"
colorama = { version = "*", markers = "sys_platform == 'win32'" }

libb-mail = { git = "https://github.com/bissli/libb-mail" }
libb-util = "*"

# == referenced
"web.py" = { version = "^0.62", optional = true }
bobo = { version = "*", optional = true }

# == test
asserts = { version = "*", optional = true }
pytest = { version = "*", optional = true }
pytest-mock = { version = "*", optional = true }
pytest-runner = { version = "*", optional = true }
docker = { version = "*", optional = true }
wrapt = { version = "*", optional = true }

[tool.poetry.extras]
test = [
  "asserts",
  "wrapt",
  "docker",
  "pytest",
  "pytest-mock",
  "pytest-runner",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
